alterando e-mail e adicionando autor

--- a/README.html
+++ b/README.html
@@ -28,9 +28,10 @@
 
         
         <address>
-            Dúvidas? Entre em <a href="mailto:fernandohsilvestre@hotmail.com">contato</a>.
+            Dúvidas? Entre em <a href="mailto:paulo.hmsilverio@gmail.com">contato</a>.
         </address>
 
+    <p> Autor: Fernado</p>        
         <p>Fonte do texto: <cite>https://tecnoblog.net/247820/machine-learning-ia-o-que-e/</cite></p>
 
     </body>
